--- a/navbar.html
+++ b/navbar.html
@@ -20,7 +20,7 @@
         <div class='underline'></div>
     </div>
     <div name='support' class='element' onclick="setTimeout(function(){window.top.location.href = 'http://roblox.com/games/6531086713/Support-my-work'}, 120)">
-        <p>support</p>
+        <p>donate</p>
         <div class='underline'></div>
     </div>
 </body>
