--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
     <iframe style='border:0;margin:0;position:fixed;top:0;left:0;width:100%;height:8%;' src='navbar.html'></iframe>
 
-    <h1 style='font-size: 10vh; margin-top: 10%;'>About Me</h1> 
+    <h1 style='font-size: 10vh;'>About Me</h1> 
 
     <p>I'm Xsticcy. A Hungarian Roblox developer.</p>
     <p>I'm good at UI design and scripting.</p>
@@ -67,5 +67,11 @@
     }
     h1 {
         text-align: center;
+        margin-top: 10%;
+    }
+    @media only screen and (max-width: 700px) {
+        h1 {
+            margin-top: 20%;
+        }
     }
 </style>
