--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <iframe style='border:0;margin:0;position:fixed;top:0;left:0;width:100%;height:8%;' src='navbar.html'></iframe>
 
-    <h1 style='font-size: 8vh; margin-top: 10%;'>Welcome!</h1> 
+    <h1 style='font-size: 8vh;'>Welcome!</h1> 
     <h1 style='font-size: 5vh; margin-top: 0; font-weight: 100;'>I'm Xsticcy, a roblox dev</h1> 
 
     <div class='le'>
@@ -72,6 +72,7 @@
     }
     h1 {
         text-align: center;
+        margin-top: 10%;
     }
     .le>h1 {
         transition: all 0.5s;
@@ -93,4 +94,11 @@
     .le:hover {
         background: aquamarine;
     }
+
+    @media only screen and (max-width: 700px) {
+        h1 {
+            margin-top: 20%;
+        }
+    }
+
 </style>
