--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
 
     <iframe style='border:0;margin:0;position:fixed;top:0;left:0;width:100%;height:8%;' src='navbar.html'></iframe>
 
-    <h1 style='font-size: 10vh; margin-top: 10%;'>My Work</h1> 
+    <h1 style='font-size: 10vh;'>My Work</h1> 
 
     <div class='work b w1'>
         <h2 style='font-size: 4vh; margin-top: 1%; font-weight: 100;'>Data Editor</h2>
@@ -130,6 +130,7 @@
     }
     h1 {
         text-align: center;
+        margin-top: 10%;
     }
     .work {
         margin:0;
@@ -205,6 +206,11 @@
         }
         .work > button:active {
             margin-left: 0px;
+        }
+    }
+    @media only screen and (max-width: 700px) {
+        h1 {
+            margin-top: 20%;
         }
     }
 </style>
