--- a/work.html
+++ b/work.html
@@ -13,9 +13,14 @@
 
     <h1 style='font-size: 10vh;'>My Work</h1> 
 
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+
     <div class='work b w1'>
-        <h2 style='font-size: 4vh; margin-top: 1%; font-weight: 100;'>Data Editor</h2>
-        <img class='thumb' src='DataEditorIcon.png'>
+        <h2 style=' margin-top: 1%; '>Data Editor</h2>
+        <img class='thumb' src=''>
         <p class='desc'>Data Editor is a free & open-source indie project. Anybody can get it anytime and share their ideas!</p>
         <p class='desc'>It is a plugin for Roblox Studio.</p>
         <button class='install' onclick="setTimeout(function(){window.open('http://roblox.com/library/6013845672/DataEditor');}, 120)">Install</button>
@@ -25,7 +30,7 @@
     </div>
 
     <div class='work g w2'>
-        <h2 style='font-size: 4vh; margin-top: 1%; font-weight: 100;'>Xsticcy UI</h2>
+        <h2 style=' margin-top: 1%; '>Xsticcy UI</h2>
         <img class='thumb' src=''>
         <p class='desc'>Xsticcy UI is a free roblox plugin. It has a lot of premade UI elements so you don't need to design them.</p>
         <p class='desc'>This plugin makes designing UIs much faster!</p>
@@ -36,7 +41,7 @@
     </div>
 
     <div class='work b w3'>
-        <h2 style='font-size: 4vh; margin-top: 1%; font-weight: 100;'>DatastoreX</h2>
+        <h2 style=' margin-top: 1%; '>DatastoreX</h2>
         <img class='thumb' src=''>
         <p class='desc'>DatastoreX is a datastore module. It is good because you can write less code, but with the same result.</p>
         <p class='desc'>DatastoreX is free as well!</p>
@@ -47,7 +52,7 @@
     </div>
 
     <div class='work g w4'>
-        <h2 style='font-size: 4vh; margin-top: 1%; font-weight: 100;'>StyleScript</h2>
+        <h2 style=' margin-top: 1%; '>StyleScript</h2>
         <img class='thumb' src=''>
         <p class='desc'>Style Script is a CSS like language for roblox UI designing. It is very easy to learn and use!</p>
         <p class='desc'></p>
@@ -58,7 +63,7 @@
     </div>
 
     <div class='work b w5'>
-        <h2 style='font-size: 4vh; margin-top: 1%; font-weight: 100;'>City Generator</h2>
+        <h2 style=' margin-top: 1%; '>City Generator</h2>
         <img class='thumb' src=''>
         <p class='desc'>City Generator was a test project to see if I can generate cities in roblox.</p>
         <p class='desc'>The project is cancelled, but you can still try it!</p>
@@ -69,7 +74,7 @@
     </div>
 
     <div class='work g w6'>
-        <h2 style='font-size: 4vh; margin-top: 1%; font-weight: 100;'>Lorem Ipsum Inserter</h2>
+        <h2 style=' margin-top: 1%; '>Lorem Ipsum Inserter</h2>
         <img class='thumb' src=''>
         <p class='desc'>Lorem Ipsum Inserter is a small but good plugin for UI designers. You can insert Lorem Ipsum into any object with text!</p>
         <p class='desc'>This plugin is cancelled too, but it still works!</p>
@@ -162,7 +167,7 @@
         border: 3px solid #101010;
         border-radius: 100px;
         color: black;
-        font-size: 1vw;
+        font-size: 1.2vw;
         width: 13%;
         padding-left: 20px;
         padding-right: 20px;
@@ -179,11 +184,21 @@
         margin-left: 10px;
     }
 
+    .work > h2 {
+        font-size: 6vh;
+        font-weight: 1000;
+    }
+
+    .work > p {
+        font-size: 3vh;
+        width: 95%;
+    }
+
     @media only screen and (max-width: 1200px) {
         /* For mobile */
         .work > button {
             width: 25%;
-            font-size: 2vw;
+            font-size: 2.2vw;
         }
     }
 
@@ -191,7 +206,7 @@
         /* For mobile */
         .work > button {
             width: 25%;
-            font-size: 2vw;
+            font-size: 2.2vw;
         }
     }
 
@@ -199,7 +214,7 @@
         /* For mobile */
         .work > button {
             width: 90%;
-            font-size: 4vw;
+            font-size: 4.2vw;
         }
         .work > button:hover {
             margin-left: 0px;
