--- a/navbar.html
+++ b/navbar.html
@@ -19,7 +19,11 @@
         <p>about me</p>
         <div class='underline'></div>
     </div>
-    <div name='support' class='element' onclick="setTimeout(function(){window.top.location.href = 'http://roblox.com/games/6531086713/Support-my-work'}, 120)">
+    <div name='stic' class='element' onclick="setTimeout(function(){window.top.location.href = 'stic/'}, 120)">
+        <p>stic</p>
+        <div class='underline'></div>
+    </div>
+    <div name='donate' class='element' onclick="setTimeout(function(){window.top.location.href = 'http://roblox.com/games/6531086713/Support-my-work'}, 120)">
         <p>donate</p>
         <div class='underline'></div>
     </div>
