--- a/work.html
+++ b/work.html
@@ -155,7 +155,7 @@
     .work.w5 { transform: translateY(400%); }
     .work.w6 { transform: translateY(500%); }
 
-    .work>* { transform: translateX(20px); }
+    .work>p, .work>button { transform: translateX(20px); }
 
     .thumb {
         height: 30%;
@@ -168,7 +168,7 @@
         border-radius: 100px;
         color: black;
         font-size: 1.2vw;
-        width: 13%;
+        width: 20%;
         padding-left: 20px;
         padding-right: 20px;
         padding-bottom: 10px;
@@ -187,6 +187,9 @@
     .work > h2 {
         font-size: 6vh;
         font-weight: 1000;
+        text-align: center;
+        left: 0;
+        width: 100%
     }
 
     .work > p {
