--- a/stic/lessons-con.html
+++ b/stic/lessons-con.html
@@ -17,6 +17,9 @@
     <div class='lesson-container' onclick=" window.top.location.href='hasproperty.html' "><div class='lesson'><p>Property checking</p></div></div>
     <div class='lesson-container' onclick=" window.top.location.href='matrix2d.html' "><div class='lesson'><p>Matrix2D</p></div></div>
     <div class='lesson-container' onclick=" window.top.location.href='matrix3d.html' "><div class='lesson'><p>Matrix3D</p></div></div>
+    <div class='lesson-container' onclick=" window.top.location.href='objectfunctions.html' "><div class='lesson'><p>Object Functions</p></div></div>
+
+
     <div class='lesson-container donate' onclick=" window.top.location.href='https://www.roblox.com/games/6531086713' "><div class='lesson donate'><p>Donate</p></div></div>
 </body>
 </html>
